--- a/views/oto/update.hbs
+++ b/views/oto/update.hbs
@@ -5,7 +5,7 @@
     <form action="/oto/update" method="post">
             <div class="control-group">
                 <label class="control-label" for="title">title</label>
-                <input class="form-control" type="text" id="title" name="title" value="{{items.title}}">
+                <input class="input-large" type="text" id="title" name="title" value="{{items.title}}">
             </div>
             <div>
                 <label for="intent">intent</label>
