--- a/views/cntt/index.hbs
+++ b/views/cntt/index.hbs
@@ -15,11 +15,26 @@
                 <td>{{this.intent}}</td>
                 <td>{{this.url}}</td>
                 <td>
-                    <a href="/cntt/delete" class="btn btn-default">Xóa</a>
-                    <a href="/cntt/update/{{this.intent}}" class="btn btn-default">Sửa</a>
+                    <button id="btnXoa" onclick="document.getElementById('myModal').style.display = 'block'; " class="btn btn-default">Xóa</button>
+                    <a href="/cntt/update/{{this._id}}" class="btn btn-default">Sửa</a>
+                    <input id="_id" type="hidden" value="{{this._id}}">
                 </td>
             </tr>
+
             {{/each}}
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close" onclick="document.getElementById('myModal').style.display = 'block'; ">&times;</span>
+                <h2>Xóa dòng dũ liệu này</h2>
+                <button class="btn btn-danger" id="btnDongY" onclick="var id = document.getElementById('_id').value; window.location.href = '/cntt/delete/'+id;">Đồng ý</button>
+                <a href=""></a>
+                <button class="btn btn-inverse" onclick="document.getElementById('myModal').style.display = 'none'">Hủy bỏ</button>
+            </div>
+
+        </div>
 
     </table>
 </div>
+
