--- a/views/layout/layout_admin.hbs
+++ b/views/layout/layout_admin.hbs
@@ -8,7 +8,50 @@
     <link href="/stylesheets/bootstrap-responsive.min.css" rel="stylesheet">
     <link id="base-style" href="/stylesheets/style.css" rel="stylesheet">
     <link id="base-style-responsive" href="/stylesheets/style-responsive.css" rel="stylesheet">
+    <style>
+        body {font-family: Arial, Helvetica, sans-serif;}
 
+        /* The Modal (background) */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            /*padding-top: 100px; !* Location of the box *!*/
+            padding: 200px 0 0 300px;
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 66%;
+            text-align: center;
+        }
+
+        /* The Close Button */
+        .close {
+            color: #aaaaaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 <!-- start: Header -->
@@ -69,8 +112,6 @@
 
             </div><!--/row-->
 
-
-
         </div><!--/.fluid-container-->
 
     </div><!--/#content.span10-->
@@ -90,6 +131,34 @@
 </footer>
 
 <!-- start: JavaScript-->
+
+<script>
+    // Get the modal
+    var modal = document.getElementById('myModal');
+
+    // Get the button that opens the modal
+    var btn = document.getElementById("btnXoa");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks the button, open the modal
+    btn.onclick = function() {
+        modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+        modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
 
 <script src="/javascripts/jquery-1.9.1.min.js"></script>
 <script src="/javascripts/jquery-migrate-1.0.0.min.js"></script>
