update chức năng config giao diện menu

--- a/views/layout/layout_admin.hbs
+++ b/views/layout/layout_admin.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
     <link id="bootstrap-style" href="/stylesheets/bootstrap.min.css" rel="stylesheet">
-    <link href="/stylesheets/bootstrap-responsive.min.css" rel="stylesheet">
+    <!--<link href="/stylesheets/bootstrap-responsive.min.css" rel="stylesheet">-->
     <link id="base-style" href="/stylesheets/style.css" rel="stylesheet">
     <link id="base-style-responsive" href="/stylesheets/style-responsive.css" rel="stylesheet">
     <style>
@@ -96,6 +96,7 @@
                 <ul class="nav nav-tabs nav-stacked main-menu">
                     <li><a href="/cntt"> Công nghệ thông tin </a></li>
                     <li><a href="/oto"> Công nghệ kỹ thuật ôtô</a></li>
+                    <li><a href="/setup">Setup menu</a></li>
                 </ul>
             </div>
         </div>
