--- a/views/oto/index.hbs
+++ b/views/oto/index.hbs
@@ -15,8 +15,8 @@
                 <td>{{this.intent}}</td>
                 <td>{{this.url}}</td>
                 <td>
-                    <button id="btnXoa" onclick="document.getElementById('myModal').style.display = 'block'; " class="btn btn-default">Xóa</button>
-                    <a href="/oto/update/{{this._id}}" class="btn btn-default">Sửa</a>
+                    <button id="btnXoa" onclick="document.getElementById('myModal').style.display = 'block'; " class="btn btn-danger">Xóa</button>
+                    <a href="/oto/update/{{this._id}}" class="btn btn-info">Sửa</a>
                     <input id="_id" type="hidden" value="{{this._id}}">
                 </td>
             </tr>
