--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -219,13 +219,13 @@
 /* Basic
 =================================================================== */
 
-body {
-	background: #F5F5F5;
-	color: #333;
-	border: none;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 400;
-}
+/*body {*/
+	/*background: #F5F5F5;*/
+	/*color: #333;*/
+	/*border: none;*/
+	/*font-family: 'Open Sans', sans-serif;*/
+	/*font-weight: 400;*/
+/*}*/
 
 a {
 	color: #646464;
@@ -380,9 +380,9 @@ a.brand span {
 /* Navigation Section
 =================================================================== */
 
-#sidebar-left {
-	background: #3A3A3A;
-}
+/*#sidebar-left {*/
+	/*background: #3A3A3A;*/
+/*}*/
 
 .sidebar-nav > ul{
 	margin: 0px;
