--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -4,11 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
-    <link id="bootstrap-style" href="stylesheets/bootstrap.min.css" rel="stylesheet">
-    <link href="stylesheets/bootstrap-responsive.min.css" rel="stylesheet">
-    <link id="base-style" href="stylesheets/style.css" rel="stylesheet">
-    <link id="base-style-responsive" href="stylesheets/style-responsive.css" rel="stylesheet">
+    <link id="bootstrap-style" href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link href="/stylesheets/bootstrap-responsive.min.css" rel="stylesheet">
+    <link id="base-style" href="/stylesheets/style.css" rel="stylesheet">
+    <link id="base-style-responsive" href="/stylesheets/style-responsive.css" rel="stylesheet">
+    <style>
+        body {font-family: Arial, Helvetica, sans-serif;}
 
+        /* The Modal (background) */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            /*padding-top: 100px; !* Location of the box *!*/
+            padding: 200px 0 0 300px;
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 66%;
+            text-align: center;
+        }
+
+        /* The Close Button */
+        .close {
+            color: #aaaaaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 <!-- start: Header -->
@@ -53,6 +96,7 @@
                 <ul class="nav nav-tabs nav-stacked main-menu">
                     <li><a href="/cntt"> Công nghệ thông tin </a></li>
                     <li><a href="/oto"> Công nghệ kỹ thuật ôtô</a></li>
+                    <li><a href="/setup">Setup menu</a></li>
                 </ul>
             </div>
         </div>
@@ -68,8 +112,6 @@
                 <div class="clearfix"></div>
 
             </div><!--/row-->
-
-
 
         </div><!--/.fluid-container-->
 
@@ -91,60 +133,88 @@
 
 <!-- start: JavaScript-->
 
-<script src="/javascripts/jquery-1.9.1.min.js"></script>
-<script src="/javascripts/jquery-migrate-1.0.0.min.js"></script>
+<script>
+    // Get the modal
+    var modal = document.getElementById('myModal');
 
-<script src="/javascripts/jquery-ui-1.10.0.custom.min.js"></script>
+    // Get the button that opens the modal
+    var btn = document.getElementById("btnXoa");
 
-<script src="/javascripts/jquery.ui.touch-punch.js"></script>
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
 
-<script src="/javascripts/modernizr.js"></script>
+    // When the user clicks the button, open the modal
+    btn.onclick = function() {
+        modal.style.display = "block";
+    }
 
-<script src="/javascripts/bootstrap.min.js"></script>
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+        modal.style.display = "none";
+    }
 
-<script src="/javascripts/jquery.cookie.js"></script>
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
 
-<script src="/javascripts/fullcalendar.min.js"></script>
+<!--<script src="/javascripts/jquery-1.9.1.min.js"></script>-->
+<!--<script src="/javascripts/jquery-migrate-1.0.0.min.js"></script>-->
 
-<script src="/javascripts/jquery.dataTables.min.js"></script>
+<!--<script src="/javascripts/jquery-ui-1.10.0.custom.min.js"></script>-->
 
-<script src="/javascripts/excanvas.js"></script>
-<script src="/javascripts/jquery.flot.js"></script>
-<script src="/javascripts/jquery.flot.pie.js"></script>
-<script src="/javascripts/jquery.flot.stack.js"></script>
-<script src="/javascripts/jquery.flot.resize.min.js"></script>
+<!--<script src="/javascripts/jquery.ui.touch-punch.js"></script>-->
 
-<script src="/javascripts/jquery.chosen.min.js"></script>
+<!--<script src="/javascripts/modernizr.js"></script>-->
 
-<script src="/javascripts/jquery.uniform.min.js"></script>
+<!--<script src="/javascripts/bootstrap.min.js"></script>-->
 
-<script src="/javascripts/jquery.cleditor.min.js"></script>
+<!--<script src="/javascripts/jquery.cookie.js"></script>-->
 
-<script src="/javascripts/jquery.noty.js"></script>
+<!--<script src="/javascripts/fullcalendar.min.js"></script>-->
 
-<script src="/javascripts/jquery.elfinder.min.js"></script>
+<!--<script src="/javascripts/jquery.dataTables.min.js"></script>-->
 
-<script src="/javascripts/jquery.raty.min.js"></script>
+<!--<script src="/javascripts/excanvas.js"></script>-->
+<!--<script src="/javascripts/jquery.flot.js"></script>-->
+<!--<script src="/javascripts/jquery.flot.pie.js"></script>-->
+<!--<script src="/javascripts/jquery.flot.stack.js"></script>-->
+<!--<script src="/javascripts/jquery.flot.resize.min.js"></script>-->
 
-<script src="/javascripts/jquery.iphone.toggle.js"></script>
+<!--<script src="/javascripts/jquery.chosen.min.js"></script>-->
 
-<script src="/javascripts/jquery.uploadify-3.1.min.js"></script>
+<!--<script src="/javascripts/jquery.uniform.min.js"></script>-->
 
-<script src="/javascripts/jquery.gritter.min.js"></script>
+<!--<script src="/javascripts/jquery.cleditor.min.js"></script>-->
 
-<script src="/javascripts/jquery.imagesloaded.js"></script>
+<!--<script src="/javascripts/jquery.noty.js"></script>-->
 
-<script src="/javascripts/jquery.masonry.min.js"></script>
+<!--<script src="/javascripts/jquery.elfinder.min.js"></script>-->
 
-<script src="/javascripts/jquery.knob.modified.js"></script>
+<!--<script src="/javascripts/jquery.raty.min.js"></script>-->
 
-<script src="/javascripts/jquery.sparkline.min.js"></script>
+<!--<script src="/javascripts/jquery.iphone.toggle.js"></script>-->
 
-<script src="/javascripts/counter.js"></script>
+<!--<script src="/javascripts/jquery.uploadify-3.1.min.js"></script>-->
 
-<script src="/javascripts/retina.js"></script>
+<!--<script src="/javascripts/jquery.gritter.min.js"></script>-->
 
-<script src="/javascripts/custom.js"></script>
+<!--<script src="/javascripts/jquery.imagesloaded.js"></script>-->
+
+<!--<script src="/javascripts/jquery.masonry.min.js"></script>-->
+
+<!--<script src="/javascripts/jquery.knob.modified.js"></script>-->
+
+<!--<script src="/javascripts/jquery.sparkline.min.js"></script>-->
+
+<!--<script src="/javascripts/counter.js"></script>-->
+
+<!--<script src="/javascripts/retina.js"></script>-->
+
+<!--<script src="/javascripts/custom.js"></script>-->
 <!-- end: JavaScript-->
 
 
