--- a/views/layout/layout_admin.hbs
+++ b/views/layout/layout_admin.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
-    <link id="bootstrap-style" href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link id="bootstrap-style" href="/stylesheets/bootstrap.css" rel="stylesheet">
     <!--<link href="/stylesheets/bootstrap-responsive.min.css" rel="stylesheet">-->
     <link id="base-style" href="/stylesheets/style.css" rel="stylesheet">
     <link id="base-style-responsive" href="/stylesheets/style-responsive.css" rel="stylesheet">
@@ -125,7 +125,7 @@
 <footer>
 
     <p>
-        <span style="text-align:left;float:left">© 2013 <a href="http://jiji262.github.io/Bootstrap_Metro_Dashboard/" alt="Bootstrap_Metro_Dashboard">Bootstrap Metro Dashboard</a></span>
+        <span style="text-align:left;float:left">Đồ án <a href="https://github.com/thanhphong97/QuanLy-Menu-Data-chatbot">Source</a></span>
 
     </p>
 
