--- a/views/cntt/insert.hbs
+++ b/views/cntt/insert.hbs
@@ -1,8 +1,8 @@
-<div class="row-fluid">
-    <h3>Thêm đữ liệu ngành công nghệ thông tin</h3>
+<div style="text-align: center" class="row-fluid">
+    <h1>Thêm đữ liệu ngành công nghệ thông tin</h1>
 </div>
 <div class="insert">
-    <form action="/cntt/insert" method="post">
+    <form class="form-actions" action="/cntt/insert" method="post">
         <div class="control-group">
             <label class="control-label" for="title">title</label>
             <input class="form-control" type="text" id="title" name="title">
@@ -16,7 +16,7 @@
             <input type="text" id="url" name="url">
         </div>
         <div>
-            <button type="submit">Create</button>
+            <button class="btn btn-primary" type="submit">Create</button>
         </div>
     </form>
 </div>
