--- a/views/oto/insert.hbs
+++ b/views/oto/insert.hbs
@@ -2,7 +2,7 @@
     <h3>Thêm đữ liệu ngành công nghệ kỹ thuật oto</h3>
 </div>
 <div class="insert">
-    <form action="/oto/insert" method="post">
+    <form class="form-actions" action="/oto/insert" method="post">
         <div class="control-group">
             <label class="control-label" for="title">title</label>
             <input class="form-control" type="text" id="title" name="title">
@@ -16,7 +16,7 @@
             <input type="text" id="url" name="url">
         </div>
         <div>
-            <button type="submit">Create</button>
+            <button class="btn btn-primary" type="submit">Create</button>
         </div>
     </form>
 </div>
