--- a/views/cntt/insert.hbs
+++ b/views/cntt/insert.hbs
@@ -1,22 +1,22 @@
 <div style="text-align: center" class="row-fluid">
-    <h1>Thêm đữ liệu ngành công nghệ thông tin</h1>
+    <h1>Thêm dữ liệu ngành công nghệ thông tin</h1>
 </div>
 <div class="insert">
-    <form class="form-actions" action="/cntt/insert" method="post">
+    <form class="form-actions" action="/oto/insert" method="post">
         <div class="control-group">
-            <label class="control-label" for="title">title</label>
+            <label class="control-label" for="title"><h2><b>Tiêu đề</b></h2></label>
             <input class="form-control" type="text" id="title" name="title">
         </div>
         <div>
-            <label for="intent">intetnt</label>
+            <label for="intent"><h2><b>Từ khóa rút gọn</b></h2></label>
             <input type="text" id="intent" name="intent">
         </div>
         <div>
-            <label for="url">url</label>
+            <label for="url"><h2><b>Link bài viết</b></h2></label>
             <input type="text" id="url" name="url">
         </div>
         <div>
-            <button class="btn btn-primary" type="submit">Create</button>
+            <button class="btn btn-primary" type="submit">Tạo</button>
         </div>
     </form>
 </div>
