--- a/views/oto/update.hbs
+++ b/views/oto/update.hbs
@@ -1,25 +1,25 @@
 <div class="row-fluid">
-    <h3>Cập nhật đữ liệu ngành công nghệ kỹ thuật oto</h3>
+    <h3>Cập nhật dữ liệu ngành công nghệ kỹ thuật oto</h3>
 </div>
 <div class="update">
     <form action="/oto/update" method="post">
-            <div class="control-group">
-                <label class="control-label" for="title">title</label>
-                <input type="text" id="title" name="title" value="{{items.title}}">
-            </div>
-            <div>
-                <label for="intent">intent</label>
-                <input type="text" id="intent" name="intent" value="{{items.intent}}">
-            </div>
-            <div>
-                <label for="url">url</label>
-                <input type="text" id="url" name="url" value="{{items.url}}">
-            </div>
+        <div class="control-group">
+            <label class="control-label" for="title"><h2><b>Tiêu đề</b></h2></label>
+            <input class="form-control" type="text" id="title" name="title" value="{{items.title}}">
+        </div>
+        <div>
+            <label for="intent"><h2><b>Từ khóa rút gọn</b></h2></label>
+            <input type="text" id="intent" name="intent" value="{{items.intent}}">
+        </div>
+        <div>
+            <label for="url"><h2><b>Link bài viết</b></h2></label>
+            <input type="text" id="url" name="url" value="{{items.url}}">
+        </div>
         <div>
             <input type="hidden" value="{{items._id}}" id="id" name="id">
         </div>
         <div>
-            <button class="btn btn-success" type="submit">Update</button>
+            <button class="btn btn-success" type="submit">Cập nhật</button>
         </div>
     </form>
 </div>
