update chức năng đăng nhập

--- a/views/cntt/insert.hbs
+++ b/views/cntt/insert.hbs
@@ -2,7 +2,7 @@
     <h1>Thêm dữ liệu ngành công nghệ thông tin</h1>
 </div>
 <div class="insert">
-    <form class="form-actions" action="/oto/insert" method="post">
+    <form class="form-actions" action="/cntt/insert" method="post">
         <div class="control-group">
             <label class="control-label" for="title"><h2><b>Tiêu đề</b></h2></label>
             <input class="form-control" type="text" id="title" name="title">
