--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1984,6 +1984,7 @@ fieldset[disabled] .btn-link:focus {
 =================================================================== */
 
 .login-box {
+
 	width: 400px;
 	margin: 100px auto;
 	background: rgb(245,245,245); /* Old browsers */
@@ -2078,6 +2079,9 @@ fieldset[disabled] .btn-link:focus {
 	-webkit-box-shadow: none;
        -moz-box-shadow: none;
           	box-shadow: none;
+	width: 85%;
+	margin-left: 26px;
+	padding: 8px;
 }
 
 .login-box .remember {
