update các validate - xóa dữ liệu menu

--- a/views/layout/layout_admin.hbs
+++ b/views/layout/layout_admin.hbs
@@ -27,15 +27,15 @@
                     <!-- start: User Dropdown -->
                     <li class="dropdown">
                         <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                             Cafêin
+                             admin
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-menu-title">
                                 <span>Account Settings</span>
                             </li>
-                            <li><a href="#"> Profile</a></li>
-                            <li><a href="#"> Logout</a></li>
+                            <!--<li><a href="#"> Profile</a></li>-->
+                            <li><a href="/logout"> Logout</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -51,7 +51,7 @@
             <div class="nav-collapse sidebar-nav">
                 <ul class="nav nav-tabs nav-stacked main-menu">
                     <li><a href="/cntt"> Công nghệ thông tin </a></li>
-                    <li><a href="/oto"> Công nghệ kỹ thuật ôtô</a></li>
+                    <!--<li><a href="/oto"> Công nghệ kỹ thuật ôtô</a></li>-->
                     <li><a href="/setup">Setup menu</a></li>
                 </ul>
             </div>
