--- a/views/oto/update.hbs
+++ b/views/oto/update.hbs
@@ -1,8 +1,8 @@
-<div class="row-fluid">
-    <h3>Cập nhật dữ liệu ngành công nghệ kỹ thuật oto</h3>
+<div style="text-align: center" class="row-fluid">
+    <h1>Cập nhật dữ liệu ngành công nghệ kỹ thuật oto</h1>
 </div>
 <div class="update">
-    <form action="/oto/update" method="post">
+    <form class="form-actions" action="/oto/update" method="post">
         <div class="control-group">
             <label class="control-label" for="title"><h2><b>Tiêu đề</b></h2></label>
             <input class="form-control" type="text" id="title" name="title" value="{{items.title}}">
